[package]
name = "tellmebotgrsam"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.23", features = ["derive"] }
ollama-rs = "0.2.2"
